<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@drawable/rounded_corners_card"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:elevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@drawable/rounded_corners_card"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewRestaurant"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/nome_restaurante"
            android:src="@drawable/splash"/>

        <TextView
            android:id="@+id/textViewRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/nome_restaurante"
            android:textColor="@color/titleDarkGrey"
            android:textSize="36sp"/>
        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/endereco_restaurante"
            android:textColor="@color/SubtitleLightGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewTimeClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/fecha_horario"
            android:textColor="@color/SubtitleLightGrey"
            android:textSize="18sp" />

    </LinearLayout>


</androidx.cardview.widget.CardView>